finished SimSG implementation